fix larghezze footer in xs + scrollbar playlist aside

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ li a{
 #container{
     height: calc(100vh - 90px);
     width: 100vw;
+    overflow: hidden;
 }
 
 a{
@@ -95,8 +96,7 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 1.25rem 1.25rem 0.5rem;
-    position: relative;
+    padding: 1.25rem 1.25rem 0.2rem;
 }
 /* logo  */
 #logo-container{
@@ -128,6 +128,10 @@ a{
     margin-bottom: 1.25rem;
 }
 
+#sidebar section{
+    overflow-y: auto;
+}
+
 #playlist i{
     background-color: grey;
     padding: .5rem;
@@ -140,16 +144,16 @@ a{
     display: inline-block;
 }
 
+#user #download{
+    height: 1rem;
+    vertical-align: bottom;
+    margin-right: .5rem;
+}
+
 #profile{
     border-radius: 100%;
     width: 1.5rem;
     background-color: grey;
-    margin-right: .5rem;
-}
-
-#user #download{
-    height: 1rem;
-    vertical-align: bottom;
     margin-right: .5rem;
 }
 
@@ -176,8 +180,7 @@ main{
     width: calc(100vw - 240px);
     float: right;
     padding: 90px 1.5rem 1.5rem 1.5rem;
-    overflow: auto;
-    
+    overflow: auto;  
 }
 /* nav  */
 #nav-container{
@@ -235,8 +238,6 @@ main section.small .row-cards{
 .img-container{
     position: relative;
 }
-
-
 
 .row-cards .card{
     width: calc(100% / 6 - 1rem);
@@ -492,13 +493,24 @@ a:hover{
     }
 
     /* #playerbar */
+    #playerbar .row .left{
+        gap: 4rem;
+    }
+
     #playerbar .right ul{
         flex-wrap: wrap;
+        justify-content: flex-start;
         gap: 1rem;
     }
 
-    #playerbar .right,#playerbar .left{
-        width: 20%;
+    #playerbar .row .right,
+    #playerbar .row .left{
+        width: 25%;
+    }
+
+    input{
+        width: 20px;
+        flex-grow: -1;
     }
 }
 
